--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,15 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.4", features = ["derive"] }
+flate2 = "1.0.30"
+hex = "0.4.3"
 home = "0.5.9"
+indicatif = "0.17.8"
+reqwest = { version = "0.12.4", features = ["blocking"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json_lenient = "0.2.1"
+sha2 = "0.10.8"
+tar = "0.4.41"
+tempfile = "3.10.1"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
