--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,12 @@ hex = "0.4.3"
 home = "0.5.9"
 indicatif = "0.17.8"
 once_cell = "1.19.0"
-reqwest = { version = "0.12.4", features = ["blocking"] }
+reqwest = { version = "0.12.4", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+    "http2",
+    "charset",
+] }
 scopeguard = "1.2.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json_lenient = "0.2.1"
