--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ hex = "0.4.3"
 home = "0.5.9"
 indicatif = "0.17.8"
 reqwest = { version = "0.12.4", features = ["blocking"] }
+scopeguard = "1.2.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json_lenient = "0.2.1"
 sha2 = "0.10.8"
