--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ sha2 = "0.10.8"
 tar = "0.4.41"
 tempfile = "3.10.1"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
