--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ flate2 = "1.0.30"
 hex = "0.4.3"
 home = "0.5.9"
 indicatif = "0.17.8"
+once_cell = "1.19.0"
 reqwest = { version = "0.12.4", features = ["blocking"] }
 scopeguard = "1.2.0"
 serde = { version = "1.0.203", features = ["derive"] }
